# arranges

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  demo.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  unit-tests.yml
LICENSE/: index.html
arange/: README.md  pyproject.toml
arange/src/arange/: __init__.py  range.py  ranges.py  utils.py
arange/tests/: test_range_construction.py  test_range_intersections.py  test_range_operators.py  test_range_properties.py  test_range_repr.py  test_range_validator.py  test_ranges.py
arange/tests/range/: test_construction.py  test_contains.py  test_equality.py  test_last.py  test_operators.py  test_repr.py  test_validator.py
arange/tests/ranges/: test_combine.py  test_construction.py  test_equality.py  test_membership.py  test_repr.py  test_validator.py
arranges/: README.md  pyproject.toml
construction/: index.html
docs/: construction.md  index.md  iteration.md  models.md  operators.md
iteration/: index.html
models/: index.html
operators/: index.html
pydoc/: index.html
scripts/: dist.sh  docs.sh  install-dev.sh  install.sh  release.sh
search/: search_index.json
src/arranges/: ranges.py  segment.py  utils.py
tests/dict/: test_construction.py  test_copy.py  test_del.py  test_examples.py  test_get.py  test_invalid_keys.py  test_operators.py  test_pop.py  test_set.py  test_update.py
tests/ranges/: test_slicing.py  test_validate.py
tests/segment/: test_coerce.py  test_comparison.py  test_comparison_flexible.py  test_contains.py  test_disjoint.py  (+2 more)
(+63 files in other folders)
